--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.3",
     "@clerk/themes": "^1.7.7",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^5.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.288.0",
     "mongose": "^0.0.2-security",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "svix": "^1.13.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^5.7.1"
+    "uploadthing": "^5.7.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
