--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cGxlYXNpbmctbGFkeWJpcmQtMTUuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_lnuERkmJRdS73LDDIiaGCHH77AY5zqeLZAYOM3Qhff
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_cGxlYXNpbmctbGFkeWJpcmQtMTUuY2xlcmsuYWNjb3VudHMuZGV2JA"
+CLERK_SECRET_KEY= "sk_test_lnuERkmJRdS73LDDIiaGCHH77AY5zqeLZAYOM3Qhff"
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
